--- a/web/client/public/index.html
+++ b/web/client/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>Agent</title>
   </head>
-  <body>
+  <body class="w-full h-screen h-full bg-gray-80">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
